```
v0.2.1
1.在网格参数优化、减半参数优化、贝叶斯优化中加入对Catboost的支持
2.在网格参数优化、减半参数优化、贝叶斯优化中加入early_stopping参数
3.优化贝叶斯优化代码使之能够支持设定随机数实现模型复现
4.优化贝叶斯优化代码使之能够支持更多参数选择，并加入固定参数
5.LgbmRFESelector更名为LgbmRFECVSelector
6.dtypeAllocator中的number类型以float和int进行了进一步的区分
7.修复了减半参数优化中模型无法通过随机数复现的bug
8.相关文档维护
```

```
v0.2.0
1.加入特征筛选方法LgbmRFESelector和LgbmSeqSelector
2.删除了corrSelector
3.优化代码
4.文档维护
```

```
v0.1.9.1
1.更新了demo:4.经典Logistic评分卡.ipynb
2.修复了诸多bug
3.文档维护
```

```
v0.1.9
1.加入perfEval模块，支持二分类排序模型评估常见的评估图ks、roc、gini、gain、lorenz、f1、pr、density
2.优化了部分模块
3.修复bug
4.文档维护
```

```
v0.1.8
1.加入binAdjuster模块，支持单特征、组特征的交互式分箱
2.优化了woe_plot的制图
3.修复了诸多bug
4.文档维护
```

```
v0.1.7
1.修复了float低精度类型的分箱导致少数结果不准确的问题
2.加入woe_plot模块,支持单特征、组特征的特征分析报告的绘图
3.修复varGroupReport中的bug
4.文档维护
```

```
v0.1.6
1.重构代码结构
2.在preSelector中加入新的特征筛选方法filterByShuffle
3.修复bug
4.文档维护
```



